--- a/src/main/resources/com/example/propertyfinder/hello-view.fxml
+++ b/src/main/resources/com/example/propertyfinder/hello-view.fxml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.HelloController">
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="221.0" style="-fx-background-color: #fff9f1;" BorderPane.alignment="CENTER">
          <effect>
             <DropShadow />
          </effect>
          <children>
-            <ImageView fitHeight="215.0" fitWidth="188.0" layoutX="11.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="11.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="file:/D:/JavaFX/Property_Finder/src/main/java/com/example/propertyfinder/logo/large_1-rF9dirqF7-transformed.png" />
                </image></ImageView>
@@ -27,7 +34,7 @@
       </AnchorPane>
    </left>
    <right>
-      <AnchorPane prefHeight="400.0" prefWidth="414.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="400.0" prefWidth="381.0" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="132.0" layoutY="66.0" text="Login">
                <font>
@@ -53,7 +60,7 @@
                <effect>
                   <InnerShadow>
                      <color>
-                        <Color red="0.18431372940540314" green="0.18039216101169586" blue="0.18039216101169586" />
+                        <Color red="0.19298245012760162" green="0.18702620267868042" blue="0.18702620267868042" />
                      </color>
                   </InnerShadow>
                </effect>
@@ -62,13 +69,6 @@
                <font>
                   <Font size="15.0" />
                </font>
-               <effect>
-                  <InnerShadow>
-                     <color>
-                        <Color red="0.18431372940540314" green="0.18039216101169586" blue="0.18039216101169586" />
-                     </color>
-                  </InnerShadow>
-               </effect>
             </Button>
             <Hyperlink layoutX="214.0" layoutY="238.0" text="Forgot Password?" textAlignment="RIGHT" />
          </children>
