--- a/src/main/resources/com/example/propertyfinder/Forgot_password.fxml
+++ b/src/main/resources/com/example/propertyfinder/Forgot_password.fxml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.ForgotPasswordController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.ForgotPasswordController">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0" visible="false">
+      <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fff9f1;">
          <children>
             <Label layoutX="164.0" layoutY="68.0" text="Forogot Password">
                <font>
@@ -44,7 +41,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="405.0" prefWidth="605.0" style="-fx-background-color: #fff9f1;">
+      <AnchorPane prefHeight="405.0" prefWidth="605.0" style="-fx-background-color: #fff9f1;" visible="false">
          <children>
             <Label layoutX="186.0" layoutY="69.0" text="New Password">
                <font>
