--- a/src/main/resources/com/example/propertyfinder/Register.fxml
+++ b/src/main/resources/com/example/propertyfinder/Register.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.Register">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.RegisterController">
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="120.0" style="-fx-background-color: #802b6e;" BorderPane.alignment="CENTER">
          <children>
