--- a/src/main/resources/com/example/propertyfinder/Client-MyProperties.fxml
+++ b/src/main/resources/com/example/propertyfinder/Client-MyProperties.fxml
@@ -2,18 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #fff9f1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.OwnerController">
-   <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </right>
-   <left>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #fff9f1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
       <AnchorPane prefHeight="500.0" prefWidth="168.8" style="-fx-background-color: #802b6e;">
          <children>
             <Button layoutX="45.0" layoutY="197.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Search" textFill="WHITE">
@@ -71,5 +71,23 @@
             <DropShadow />
          </effect>
       </AnchorPane>
-   </left>
-</BorderPane>
+      <TableView layoutX="176.0" layoutY="99.0" prefHeight="283.0" prefWidth="616.0">
+         <columns>
+            <TableColumn prefWidth="66.4000244140625" text="ID" />
+            <TableColumn prefWidth="75.99998474121094" text="Price" />
+            <TableColumn prefWidth="73.5999755859375" text="Area" />
+            <TableColumn prefWidth="87.20001220703125" text="Bedrooms" />
+            <TableColumn prefWidth="81.5999755859375" text="Bathrooms" />
+            <TableColumn prefWidth="72.79998779296875" text="Type" />
+            <TableColumn prefWidth="79.99993896484375" text="Date" />
+            <TableColumn prefWidth="86.4000244140625" text="Name" />
+         </columns>
+      </TableView>
+      <TextField layoutX="185.0" layoutY="26.0" prefHeight="28.0" prefWidth="173.0" promptText="         Search" style="-fx-border-radius: 2em; -fx-background-color: #fff9f1; -fx-border-color: #020202 #802b6e; -fx-background-radius: 5em;" />
+      <ImageView accessibleRole="BUTTON" fitHeight="21.0" fitWidth="25.0" layoutX="194.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../java/com/example/propertyfinder/logo/icons8-search-52.png" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
