--- a/src/main/resources/com/example/propertyfinder/Client-PropertyDetails.fxml
+++ b/src/main/resources/com/example/propertyfinder/Client-PropertyDetails.fxml
@@ -10,9 +10,77 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #fff9f1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.OwnerController">
-   <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </right>
+    <right>
+        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <ImageView fitHeight="206.0" fitWidth="524.0" layoutX="-360.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../../../java/com/example/propertyfinder/logo/property1.jpg" />
+                    </image>
+                </ImageView>
+                <Label layoutX="-82.0" layoutY="269.0" prefHeight="27.0" prefWidth="191.0" text="2,400,000$" textAlignment="RIGHT">
+                    <font>
+                        <Font name="System Bold" size="20.0" />
+                    </font>
+                </Label>
+                <Label layoutX="-82.0" layoutY="324.0" prefHeight="22.0" prefWidth="118.0" text="no. of bedrooms">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+                <Label layoutX="-82.0" layoutY="347.0" prefHeight="22.0" prefWidth="123.0" text="no. of bathrooms">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+                <Label layoutX="-82.0" layoutY="370.0" prefHeight="22.0" prefWidth="123.0" text="type">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+                <Label layoutX="-82.0" layoutY="393.0" prefHeight="22.0" prefWidth="123.0" text="Status">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+                <Label layoutX="-82.0" layoutY="299.0" prefHeight="22.0" prefWidth="118.0" text="Location">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+                <Label layoutX="-82.0" layoutY="415.0" prefHeight="22.0" prefWidth="118.0" text="Postal_code">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+            </children></AnchorPane>
+    </right>
+    <center>
+        <AnchorPane prefHeight="500.0" prefWidth="511.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label layoutX="14.0" layoutY="270.0" prefHeight="27.0" prefWidth="191.0" text="Property Name">
+                    <font>
+                        <Font name="System Bold" size="20.0" />
+                    </font>
+                </Label>
+                <ImageView fitHeight="37.0" fitWidth="41.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../../../java/com/example/propertyfinder/logo/icons8-go-back-64.png" />
+                    </image>
+                </ImageView>
+                <Label layoutX="14.0" layoutY="303.0" prefHeight="125.0" prefWidth="250.0" text="The package for this problem was not updated by the problem writer or Codeforces administration after we've upgraded the judging servers. " wrapText="true">
+                    <font>
+                        <Font size="16.0" />
+                    </font>
+                </Label>
+                <Button layoutX="288.0" layoutY="447.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Purchase" textFill="WHITE">
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Button>
+            </children>
+        </AnchorPane>
+    </center>
    <left>
       <AnchorPane prefHeight="500.0" prefWidth="168.8" style="-fx-background-color: #802b6e;">
          <children>
