--- a/src/main/resources/com/example/propertyfinder/Owner-EditProfile.fxml
+++ b/src/main/resources/com/example/propertyfinder/Owner-EditProfile.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,62 +12,6 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #fff9f1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.OwnerController">
-    <left>
-        <AnchorPane prefHeight="400.0" prefWidth="162.0" style="-fx-background-color: #802b6e;" BorderPane.alignment="CENTER">
-            <children>
-                <Button layoutX="45.0" layoutY="161.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Properties" textFill="WHITE">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-                <Button layoutX="45.0" layoutY="197.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Clients" textFill="WHITE">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-                <Button layoutX="45.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Edit Profile" textFill="WHITE">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-                <Button layoutX="51.0" layoutY="333.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Logout" textFill="WHITE">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-                <ImageView fitHeight="82.0" fitWidth="67.0" layoutX="47.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-user-64%20(1).png" />
-                    </image>
-                </ImageView>
-                <Label layoutX="31.0" layoutY="101.0" text="Username" textFill="WHITE">
-                    <font>
-                        <Font name="System Bold" size="21.0" />
-                    </font>
-                </Label>
-                <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="17.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-property-50.png" />
-                    </image>
-                </ImageView>
-                <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="17.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-manager-64.png" />
-                    </image>
-                </ImageView>
-                <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="17.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-registration-64.png" />
-                    </image>
-                </ImageView>
-                <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="23.0" layoutY="332.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-logout-48.png" />
-                    </image>
-                </ImageView>
-            </children>
-        </AnchorPane>
-    </left>
     <right>
         <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
@@ -123,4 +68,63 @@
             </children>
         </AnchorPane>
     </center>
+   <left>
+      <AnchorPane prefHeight="500.0" prefWidth="168.0" style="-fx-background-color: #802b6e;">
+         <children>
+            <Button layoutX="37.0" layoutY="196.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Properties" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button layoutX="46.0" layoutY="244.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Clients" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <Button layoutX="48.0" layoutY="291.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Edit Profile" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="13.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../java/com/example/propertyfinder/logo/icons8-property-50.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="13.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-manager-64.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="15.0" layoutY="293.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-registration-64.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="71.0" fitWidth="71.0" layoutX="47.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-user-64%20(1).png" />
+               </image>
+            </ImageView>
+            <Label layoutX="31.0" layoutY="120.0" text="Username" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="21.0" />
+               </font>
+            </Label>
+            <Button layoutX="45.0" layoutY="393.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Logout" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="21.0" layoutY="396.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../java/com/example/propertyfinder/logo/icons8-logout-48.png" />
+               </image>
+            </ImageView>
+         </children>
+         <effect>
+            <DropShadow />
+         </effect>
+      </AnchorPane>
+   </left>
 </BorderPane>
