--- a/src/main/resources/com/example/propertyfinder/Owner-Properties.fxml
+++ b/src/main/resources/com/example/propertyfinder/Owner-Properties.fxml
@@ -2,71 +2,159 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #fff9f1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.propertyfinder.OwnerController">
-   <left>
-      <AnchorPane prefHeight="400.0" prefWidth="162.0" style="-fx-background-color: #802b6e;" BorderPane.alignment="CENTER">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #fff9f1;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane layoutX="-1.0" prefHeight="500.0" prefWidth="168.0" style="-fx-background-color: #802b6e;">
          <children>
-            <Button layoutX="45.0" layoutY="161.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Properties" textFill="WHITE">
+            <Button layoutX="37.0" layoutY="196.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Properties" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font size="16.0" />
                </font>
             </Button>
-            <Button layoutX="45.0" layoutY="197.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Clients" textFill="WHITE">
+            <Button layoutX="46.0" layoutY="244.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="View Clients" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font size="16.0" />
                </font>
             </Button>
-            <Button layoutX="45.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Edit Profile" textFill="WHITE">
+            <Button layoutX="48.0" layoutY="291.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Edit Profile" textFill="WHITE">
                <font>
-                  <Font size="14.0" />
+                  <Font size="16.0" />
                </font>
             </Button>
-            <Button layoutX="51.0" layoutY="333.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Logout" textFill="WHITE">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <ImageView fitHeight="82.0" fitWidth="67.0" layoutX="47.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="13.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-user-64%20(1).png" />
+                  <Image url="@../../../../java/com/example/propertyfinder/logo/icons8-property-50.png" />
                </image>
             </ImageView>
-            <Label layoutX="31.0" layoutY="101.0" text="Username" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="21.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="17.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-property-50.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="17.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="13.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-manager-64.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="17.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="15.0" layoutY="293.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-registration-64.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="23.0" layoutY="332.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="71.0" fitWidth="71.0" layoutX="47.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-logout-48.png" />
+                  <Image url="file:/C:/Users/Lenovo/IdeaProjects/propertyFinder/src/main/java/com/example/propertyfinder/logo/icons8-user-64%20(1).png" />
+               </image>
+            </ImageView>
+            <Label layoutX="31.0" layoutY="120.0" text="Username" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="21.0" />
+               </font>
+            </Label>
+            <Button layoutX="45.0" layoutY="393.0" mnemonicParsing="false" style="-fx-background-color: #802b6e;" text="Logout" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="31.0" fitWidth="38.0" layoutX="21.0" layoutY="396.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../java/com/example/propertyfinder/logo/icons8-logout-48.png" />
                </image>
             </ImageView>
          </children>
+         <effect>
+            <DropShadow />
+         </effect>
       </AnchorPane>
-   </left>
-   <right>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </right>
-</BorderPane>
+      <TableView layoutX="209.0" layoutY="60.0" prefHeight="200.0" prefWidth="542.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="ID" />
+          <TableColumn prefWidth="81.60003662109375" text="Price" />
+            <TableColumn prefWidth="87.20001220703125" text="Area" />
+            <TableColumn prefWidth="72.00006103515625" text="Bedrooms" />
+            <TableColumn prefWidth="75.20001220703125" text="Bathrooms" />
+            <TableColumn prefWidth="75.20001220703125" text="Type" />
+            <TableColumn prefWidth="72.800048828125" text="Status" />
+        </columns>
+      </TableView>
+      <TextField layoutX="212.0" layoutY="19.0" prefHeight="28.0" prefWidth="173.0" promptText="         Search" style="-fx-border-radius: 2em; -fx-background-color: #fff9f1; -fx-border-color: #020202 #802b6e; -fx-background-radius: 5em;" />
+      <ImageView accessibleRole="BUTTON" fitHeight="21.0" fitWidth="25.0" layoutX="221.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../java/com/example/propertyfinder/logo/icons8-search-52.png" />
+         </image>
+      </ImageView>
+      <TextField layoutX="248.0" layoutY="321.0" />
+      <TextField layoutX="512.0" layoutY="321.0" />
+      <TextField layoutX="512.0" layoutY="283.0" />
+      <TextField layoutX="248.0" layoutY="285.0" />
+      <TextField layoutX="248.0" layoutY="357.0" />
+      <TextField layoutX="248.0" layoutY="392.0" />
+      <TextField layoutX="248.0" layoutY="428.0" />
+      <Label layoutX="218.0" layoutY="286.0" text="ID:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="192.0" layoutY="428.0" text="Status:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="202.0" layoutY="391.0" text="Type:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="424.0" layoutY="321.0" text="Bathrooms:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="426.0" layoutY="283.0" text="Bedrooms:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="202.0" layoutY="356.0" text="Area:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="200.0" layoutY="322.0" text="Price:">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Button layoutX="428.0" layoutY="386.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="66.0" style="-fx-background-color: #802b6e;" text="Clear" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="428.0" layoutY="441.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="66.0" style="-fx-background-color: #802b6e;" text="Add" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="522.0" layoutY="440.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="65.0" style="-fx-background-color: #d92323;" text="Delete" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button layoutX="521.0" layoutY="386.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="66.0" style="-fx-background-color: #802b6e;" text="Update" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <AnchorPane layoutX="630.0" layoutY="364.0" prefHeight="99.0" prefWidth="150.0" style="-fx-background-color: #fff9f1; -fx-border-radius: 2em; -fx-background-radius: 4em; -fx-border-color: #020202 #802b6e;" />
+      <Label layoutX="662.0" layoutY="468.0" text="Import picture" textFill="#403636">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+   </children>
+</AnchorPane>
